--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ logging.level.org.hibernate.type=TRACE
 spring.h2.console.enabled=true
 
 
+# 세션 데이터를 DB에 저장
+spring.session.store-type=jdbc
+
+spring.datasource.url=jdbc:h2:mem:jojoldu-springboot-aws
