--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compile 'org.springframework.boot:spring-boot-starter-mustache'
+	compile 'org.springframework.boot:spring-boot-devtools'
+	compile 'com.google.code.gson:gson:2.8.6'
 	compile 'org.projectlombok:lombok'
 	compile 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
