oauth 프로파일 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-spring.jpa.show_sql=true
 logging.level.ninjasul=INFO
 logging.level.org.hibernate.type=TRACE
+
+spring.jpa.show_sql=true
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:jojoldu-springboot-aws
+
+spring.profiles.include=oauth
