--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 	compile 'org.springframework.boot:spring-boot-starter-mustache'
 	compile 'org.springframework.boot:spring-boot-devtools'
 	compile 'com.google.code.gson:gson:2.8.6'
