세션저장소를 DB로 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:jojoldu-springboot-aws
 
 spring.profiles.include=oauth
+
+# 세션 저장소를 DB로 설정
+spring.session.store-type=jdbc
