--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-	compile 'org.springframework.boot:spring-boot-starter-mustache'
-	compile 'org.springframework.boot:spring-boot-devtools'
-	compile 'org.springframework.session:spring-session-jdbc'
-	compile 'com.google.code.gson:gson:2.8.6'
-	compile 'org.projectlombok:lombok'
-	compile 'com.h2database:h2'
+	implementation 'org.springframework.boot:spring-boot-starter-mustache'
+	implementation 'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.springframework.session:spring-session-jdbc'
+	implementation 'com.google.code.gson:gson:2.8.6'
+	implementation 'org.projectlombok:lombok'
+	implementation 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
