--- a/.travis.yml
+++ b/.travis.yml
@@ -20,9 +20,9 @@ script: "./gradlew clean build"
 # zip -r jojoldu-springboot-aws-service: zip 파일로 압축
 # mkdir -p deploy: deploy 라는 디렉토리를 Travis CI가 실행 중인 위치에 생성함. -p 옵션은 중간 경로가 존재하지 않을 때도 오류 없이 생성함.
 before_deploy:
-  - zip -r jojoldu-springboot-aws-service *
+  - zip -r jojoldu-springboot-aws *
   - mkdir -p deploy
-  - mv jojoldu-springboot-aws-service deploy/jojoldu-springboot-aws-service.zip
+  - mv jjojoldu-springboot-aws deploy/jojoldu-springboot-aws.zip
 
 # deploy: S3 파일 업로드 선언
 deploy:
