--- a/appspec.yml
+++ b/appspec.yml
@@ -5,3 +5,19 @@ files:
   - source: /
     destination: /home/ec2-user/app/step2/zip/
     overwrite: yes
+
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ec2-user
+    group: ec2-user
+
+# hooks: CodeDeploy 배포 단계에서 실행할 명령어를 지정함.
+hooks:
+  ApplicationStart:
+      # location: 배포파일 경로
+    - location: deploy.sh
+      # timeout: 스크립트 60초 이상 수행 시 실패 처리
+      timeout: 60
+      # ec2-user 권한으로 실행
+      runas: ec-user2
