--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,9 +46,11 @@ http {
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
+        include /etc/nginx/conf.d/service-url.inc;
+
         location / {
                 # 엔진엑스로 요청이 오면 http://localhost:8080 으로 전달
-                proxy_pass http://localhost:8080;
+                proxy_pass $service_url;
 
                 # 헤더 셋팅
                 proxy_set_header X-Real-IP $remote_addr;
