--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script: "./gradlew clean build"
 # Travis CI는 특정 파일 단위로만 업로드 할 수 없으므로 deploy 디렉토리를 생성하여 해당 디렉토리를 배포.
 before_deploy:
   - mkdir -p before-deploy
-  - cp scripts/deploy.sh before-deploy/
+  - cp scripts/*.sh before-deploy/
   - cp appspec.yml before-deploy/
   - cp build/libs/*.jar before-deploy/
   - cd before-deploy && zip -r before-deploy *
